# search_engine

./: .gitignore  CMakeLists.txt  auto_train.py
indexer/: main.cpp
lib/include/: Common.h  Document.h  Encoding.h  ForwardIndex.h  Index.h  Ranker.h  SearchEngine.h  SkipList.h  Tokenizer.h
lib/src/: Index.cpp  SearchEngine.cpp  Tokenizer.cpp
server/: main.cpp
web/: index.html
